--- a/Swift3/scratchy/scratchy/SampleView.xib
+++ b/Swift3/scratchy/scratchy/SampleView.xib
@@ -9,7 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SampleView" customModule="scratchy" customModuleProvider="target">
+            <connections>
+                <outlet property="theLabel" destination="X6D-EA-1f6" id="MHK-97-tBY"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
@@ -17,12 +21,11 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" tag="99" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="X6D-EA-1f6">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.16971295480000001" green="0.77613121039999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="X6D-EA-1f6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CuJ-hc-web"/>
                 <constraint firstItem="X6D-EA-1f6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Cze-xA-KMU"/>
