--- a/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
+++ b/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Qv6-P8-jQF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ckx-CH-3E2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -67,5 +67,177 @@
             </objects>
             <point key="canvasLocation" x="1594" y="86"/>
         </scene>
+        <!--Better Button View Controller-->
+        <scene sceneID="Ngz-CR-Cj8">
+            <objects>
+                <viewController id="ciO-qt-qWu" customClass="BetterButtonViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Iq9-j7-qVY"/>
+                        <viewControllerLayoutGuide type="bottom" id="vCN-qZ-U4X"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7hJ-BK-4X8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTg-Sp-0e8" customClass="BetterButton" customModule="scratchy" customModuleProvider="target">
+                                <rect key="frame" x="67" y="233" width="240" height="200"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0Vh-Dv-wtQ"/>
+                                    <constraint firstAttribute="height" constant="200" id="xx7-Gq-r1D"/>
+                                </constraints>
+                                <state key="normal" title="The Title Here"/>
+                                <connections>
+                                    <action selector="doTap:" destination="ciO-qt-qWu" eventType="touchUpInside" id="ib3-gO-jU7"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJI-mk-qdI">
+                                <rect key="frame" x="87" y="466" width="200" height="100"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="6EZ-Jx-vMH"/>
+                                    <constraint firstAttribute="width" constant="200" id="XUf-Rb-XQa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is teh text of the label" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="80b-lT-yPB">
+                                <rect key="frame" x="37" y="574" width="322" height="85"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="61"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wlo-md-NKH">
+                                <rect key="frame" x="87.5" y="85" width="200" height="100"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="ZNT-Kd-nM3"/>
+                                    <constraint firstAttribute="width" constant="200" id="pUS-XV-1sO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="100"/>
+                                <state key="normal" title="Click Me">
+                                    <color key="titleColor" red="0.14271670450000001" green="0.41477741839999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99607843139999996" green="0.72941176470000002" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="HTg-Sp-0e8" firstAttribute="centerX" secondItem="7hJ-BK-4X8" secondAttribute="centerX" id="52N-U0-L5R"/>
+                            <constraint firstItem="wlo-md-NKH" firstAttribute="centerX" secondItem="7hJ-BK-4X8" secondAttribute="centerX" id="Pnz-k3-adm"/>
+                            <constraint firstItem="HTg-Sp-0e8" firstAttribute="centerY" secondItem="7hJ-BK-4X8" secondAttribute="centerY" id="Vgo-es-DDE"/>
+                            <constraint firstItem="wlo-md-NKH" firstAttribute="top" secondItem="Iq9-j7-qVY" secondAttribute="bottom" constant="65" id="XfT-ay-jdJ"/>
+                            <constraint firstItem="vCN-qZ-U4X" firstAttribute="top" secondItem="UJI-mk-qdI" secondAttribute="bottom" constant="101" id="ftt-0j-8Dq"/>
+                            <constraint firstItem="UJI-mk-qdI" firstAttribute="centerX" secondItem="7hJ-BK-4X8" secondAttribute="centerX" id="hRU-dO-SOz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="normButton" destination="wlo-md-NKH" id="7KK-XJ-aV5"/>
+                        <outlet property="theLabel" destination="UJI-mk-qdI" id="AeY-1f-gHg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SAM-lk-dg7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2320.8000000000002" y="88.605697151424295"/>
+        </scene>
+        <!--Footer View View Controller-->
+        <scene sceneID="ehq-Vh-uLH">
+            <objects>
+                <viewController id="w5y-3v-7Np" customClass="FooterViewViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZQF-QQ-qXk"/>
+                        <viewControllerLayoutGuide type="bottom" id="ewt-Gm-BEU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pi0-Oe-0cA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXY-rK-PzK">
+                                <rect key="frame" x="16" y="20" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gxu-aI-ZdE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2117.5999999999999" y="764.16791604197908"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="MoJ-VJ-vF8">
+            <objects>
+                <viewController id="ckx-CH-3E2" customClass="ProfileViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="apq-ha-KKL"/>
+                        <viewControllerLayoutGuide type="bottom" id="EoS-Cm-wa7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ilG-lX-hwD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ayD-dA-c0x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2990" y="821"/>
+        </scene>
+        <!--Camera With Target View Controller-->
+        <scene sceneID="Rri-Je-8D8">
+            <objects>
+                <viewController id="pSM-hs-nHW" customClass="CameraWithTargetViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Ll-aH-bAL"/>
+                        <viewControllerLayoutGuide type="bottom" id="03h-gG-Eno"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bKT-io-Rm7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JhZ-6q-TYY">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="HrY-hJ-pwa"/>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swiftBlue256" translatesAutoresizingMaskIntoConstraints="NO" id="gVE-RG-hMn">
+                                <rect key="frame" x="0.0" y="44" width="375" height="577"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vqx-JN-fp9">
+                                <rect key="frame" x="164" y="629" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="actionCameraCapture:" destination="pSM-hs-nHW" eventType="touchUpInside" id="eYI-fT-wHk"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aw7-nO-HWk">
+                                <rect key="frame" x="0.0" y="504" width="121" height="117"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.23040701274362474" green="0.80328703962282677" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <connections>
+                        <outlet property="btnCapture" destination="Vqx-JN-fp9" id="hGz-Mp-8jI"/>
+                        <outlet property="imgOverlay" destination="gVE-RG-hMn" id="WWj-Dd-aGG"/>
+                        <outlet property="navigationBar" destination="JhZ-6q-TYY" id="4Xz-ff-Ixw"/>
+                        <outlet property="shapeLayer" destination="aw7-nO-HWk" id="cgb-nc-bpa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rfo-SG-di2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2984.8000000000002" y="84.107946026986511"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="swiftBlue256" width="256" height="256"/>
+    </resources>
 </document>
